# prox-casino

./: .gitignore  Cargo.toml  LICENSE  README.md  agentins
.opencode/plans/: blackjack-overhaul.md
src/: main.rs
src/app/: mod.rs
src/core/: config.rs
src/games/: mod.rs  traits.rs
src/games/blackjack/: mod.rs
src/games/slots/: mod.rs
src/models/: game.rs  mod.rs  mode.rs  player.rs  stats.rs
src/network/: client.rs  protocol.rs
src/security/: mod.rs
src/services/: save.rs
src/storage/: local.rs  mod.rs  sqlite.rs
src/ui/: mod.rs  theme.rs
src/ui/animations/: mod.rs
src/ui/components/: footer.rs  header.rs  mod.rs  modal.rs  notifications.rs
src/ui/screens/: blackjack.rs  dashboard.rs  mod.rs  online.rs  slots.rs
src/utils/: chip_format.rs  errors.rs  mod.rs  rng.rs
