[package]
name = "prox-casino"
version = "0.2.0"
edition = "2021"
authors = ["PROX CASINO Contributors"]
license = "MIT"
description = "terminal casino thing - blackjack and slots"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time", "sync"] }
ratatui = "0.27"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
uuid = { version = "1.10", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
